# Ideapad-Battery-Saver

./: README.md  meson.build
data/: BatterySaver-launcher  BatterySaver-pkexec  BatterySaver.desktop  BatterySaver.policy
src/: main.vala  meson.build
